--- a/.github/workflows/db-backup.yml
+++ b/.github/workflows/db-backup.yml
@@ -19,8 +19,8 @@ jobs:
     - name: Run backup script
       uses: appleboy/ssh-action@v1.0.3
       with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USER }}
+        host: ${{ vars.HOST }}
+        username: ${{ vars.USER }}
         key: ${{ secrets.SSH_KEY }}
         # optionally add: known_hosts: ${{ secrets.SSH_KNOWN_HOSTS }}
         script: |
