--- a/.github/workflows/vm_init.yml
+++ b/.github/workflows/vm_init.yml
@@ -21,16 +21,28 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           script: |
             set -Eeuo pipefail
-            curl -fsSL https://get.docker.com -o get-docker.sh
-            sh get-docker.sh
 
+          # Install Docker (official script)
+            for i in {1..3}; do
+            curl -fsSL https://get.docker.com -o get-docker.sh && break || sleep 2
+            done
+            sh get-docker.sh
+            docker version
+            
+            # Install docker-rollout (pin to release; fallback to main)
             mkdir -p ~/.docker/cli-plugins
-            # Pin a known version
-            RVER="v1.5.0"
-            curl -fsSL "https://raw.githubusercontent.com/wowu/docker-rollout/${RVER}/docker-rollout" -o ~/.docker/cli-plugins/docker-rollout
+            RVER="v0.13"
+            if curl -fsSL "https://raw.githubusercontent.com/wowu/docker-rollout/${RVER}/docker-rollout" \
+              -o ~/.docker/cli-plugins/docker-rollout; then
+                echo "docker-rollout: pinned ${RVER}"
+              else
+                echo "docker-rollout: falling back to main"
+                curl -fsSL "https://raw.githubusercontent.com/wowu/docker-rollout/main/docker-rollout" \
+                -o ~/.docker/cli-plugins/docker-rollout
+            fi
+
             chmod +x ~/.docker/cli-plugins/docker-rollout
-            # Optionally verify checksum you precomputed and store as secret:
-            # echo "${{ secrets.ROLLOUT_SHA256 }}  ~/.docker/cli-plugins/docker-rollout" | sha256sum -c -
+            ~/.docker/cli-plugins/docker-rollout --help >/dev/null
 
       - name: Give user ability to run docker and restart Docker
         uses: appleboy/ssh-action@v1.0.3
