--- a/.github/workflows/vm_init.yml
+++ b/.github/workflows/vm_init.yml
@@ -39,34 +39,37 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install Docker and docker-rollout
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ vars.HOST }}
-          username: ${{ vars.USER }}
-          key: ${{ secrets.SSH_KEY }}
-          script: |
-            set -Eeuo pipefail
-
-            # Install Docker (official script)
-            for i in {1..3}; do
+        run: |
+          set -Eeuo pipefail
+          
+          # Install Docker (official script)
+          for i in {1..3}; do
             curl -fsSL https://get.docker.com -o get-docker.sh && break || sleep 2
-            done
-            sh get-docker.sh
-            docker version
-            
-            # Install docker-rollout (pin to release; fallback to main)
-            mkdir -p ~/.docker/cli-plugins
-            RVER="v0.13"
-
-            if curl -fsSL "https://raw.githubusercontent.com/wowu/docker-rollout/${RVER}/docker-rollout" -o ~/.docker/cli-plugins/docker-rollout; then
-              echo "docker-rollout: pinned ${RVER}"
-            else
-              echo "docker-rollout: falling back to main"
-              curl -fsSL "https://raw.githubusercontent.com/wowu/docker-rollout/main/docker-rollout" -o ~/.docker/cli-plugins/docker-rollout
-            fi
-
-            chmod +x ~/.docker/cli-plugins/docker-rollout
-            ~/.docker/cli-plugins/docker-rollout --help >/dev/null
+          done
+          sh get-docker.sh
+          docker version
+          
+          # Install docker-rollout (pin to release; fallback to main)
+          mkdir -p ~/.docker/cli-plugins
+          RVER="v0.13"
+          if curl -fsSL "https://raw.githubusercontent.com/wowu/docker-rollout/${RVER}/docker-rollout" \
+               -o ~/.docker/cli-plugins/docker-rollout; then
+            echo "docker-rollout: pinned ${RVER}"
+          else
+            echo "docker-rollout: falling back to main"
+            curl -fsSL "https://raw.githubusercontent.com/wowu/docker-rollout/main/docker-rollout" \
+              -o ~/.docker/cli-plugins/docker-rollout
+          fi
+          
+          chmod +x ~/.docker/cli-plugins/docker-rollout
+          
+          # Validate via Docker CLI (not by executing the script directly)
+          docker rollout --help >/dev/null
+          
+          # Optional extra sanity:
+          which docker
+          docker --version
+          ls -l ~/.docker/cli-plugins/docker-rollout
 
       - name: Give user ability to run docker and restart Docker
         uses: appleboy/ssh-action@v1.0.3
