--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -136,7 +136,7 @@ services:
     logging: *default-logging
 
   api:
-    image: ghcr.io/hadijaveed/docker-compose-anywhere/app:${IMAGE_TAG:-latest}
+    image: ghcr.io/bartekus/platform/api:${IMAGE_TAG:-latest}
     depends_on:
       db:
         condition: service_healthy
@@ -168,30 +168,30 @@ services:
       start_period: 20s
     logging: *default-logging
 
-  background:
-    image: ghcr.io/hadijaveed/docker-compose-anywhere/background:${IMAGE_TAG:-latest}
-    depends_on:
-      db:
-        condition: service_healthy
-      redis:
-        condition: service_healthy
-    env_file:
-      - /etc/platform/env
-    environment:
-      - DATABASE_URL=postgresql+psycopg2://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
-    networks: [net]
-    restart: always
-    healthcheck:
-      test: ["CMD-SHELL", "python -c 'import sys; sys.exit(0)'"]
-      interval: 30s
-      timeout: 5s
-      retries: 10
-    logging: *default-logging
+#  background:
+#    image: ghcr.io/bartekus/platform/background:${IMAGE_TAG:-latest}
+#    depends_on:
+#      db:
+#        condition: service_healthy
+#      redis:
+#        condition: service_healthy
+#    env_file:
+#      - /etc/platform/env
+#    environment:
+#      - DATABASE_URL=postgresql+psycopg2://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
+#      - REDIS_HOST=redis
+#      - REDIS_PORT=6379
+#    networks: [net]
+#    restart: always
+#    healthcheck:
+#      test: ["CMD-SHELL", "python -c 'import sys; sys.exit(0)'"]
+#      interval: 30s
+#      timeout: 5s
+#      retries: 10
+#    logging: *default-logging
 
   web:
-    image: ghcr.io/hadijaveed/docker-compose-anywhere/web:${IMAGE_TAG:-latest}
+    image: ghcr.io/bartekus/platform/web:${IMAGE_TAG:-latest}
     depends_on:
       api:
         condition: service_healthy
